--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <li><a href="/">Homepage</a></li>
             <!-- This is an A11y Change -->
             <li aria-haspopup="true"></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/login.html">Login</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="login.html">Login</a></li>
             <li><a href="https://google.com">Google</a></li>
         </ul>
     </nav>
